--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       sessionStorage.setItem("popupSeen", "true");
     }
   </script>
-
+<script src="script.js"></script>
+<script src="popup.js"></script>
 </body>
 </html>
 
