--- a/construction.html
+++ b/construction.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <div>
-      <center><img alt="USCB Campus Life Logo" src="Campus Life 2C.png" /></center>
+      <center><img alt="USCB Campus Life Logo" src="Page UNder Construction.png" /></center>
     </div>
     <nav>
       <ul>
