--- a/construction.html
+++ b/construction.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <div>
-      <center><img alt="USCB Campus Life Logo" src="Page UNder Construction.png" /></center>
+      <center><img alt="USCB Campus Life Logo" src="Campus Life 2C.png" /></center>
     </div>
     <nav>
       <ul>
@@ -34,7 +34,7 @@
 
     <!-- Intro image -->
     <div class="about-section">
-      <img src="2024-03-15-tour-hargray.jpeg" alt="Campus Life Group Photo" />
+      <img src="Page UNder Construction.png" alt="Campus Life Group Photo" />
     </div>
 
     
