--- a/construction.html
+++ b/construction.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Under Construction</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .centered-image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 4rem 0;
+    }
+
+    .centered-image img {
+      max-width: 90%;
+      height: auto;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
 
@@ -28,18 +42,11 @@
     </nav>
   </header>
 
-  <!-- Main content -->
+  <!-- Main content: centered image -->
   <main>
- 
-
-    <!-- Intro image -->
-    <div class="about-section">
-      <img src="Page UNder Construction.png" alt="Campus Life Group Photo" />
+    <div class="centered-image">
+      <img src="Page UNder Construction.png" alt="Page Under Construction" />
     </div>
-
-    
-
-
   </main>
 
   <!-- Footer -->
