--- a/About.html
+++ b/About.html
@@ -20,8 +20,8 @@
         <li><a href="events.html">Events</a></li>
         <li><a href="#">Clubs</a></li>
         <li><a href="#">Staff</a></li>
-        <li><a href="#">Resources</a></li>
-        <li><a href="#">News</a></li>
+        <li><a href="construction.html">Resources</a></li>
+        <li><a href="construction.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><input type="text" placeholder="Search" aria-label="Search" /></li>
       </ul>
