--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
-        <li><a href="#">Events</a></li>
+        <li><a href="events.html">Events</a></li>
         <li><a href="#">Clubs</a></li>
         <li><a href="#">Staff</a></li>
-        <li><a href="#">Resources</a></li>
-        <li><a href="#">News</a></li>
+        <li><a href="construction.html">Resources</a></li>
+        <li><a href="construction.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><input type="text" placeholder="Search" aria-label="Search" /></li>
       </ul>
