--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     </figure>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+             <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="clubs.html">Clubs</a></li>
-        <li><a href="staff.html">Staff</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="news.html">News</a></li>
+        <li><a href="#">Clubs</a></li>
+        <li><a href="#">Staff</a></li>
+        <li><a href="construction.html">Resources</a></li>
+        <li><a href="construction.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><input type="text" placeholder="Search" /></li>
+        <li><input type="text" placeholder="Search" aria-label="Search" /></li>
       </ul>
     </nav>
   </header>
