--- a/construction.html
+++ b/construction.html
@@ -4,35 +4,47 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Under Construction</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" /> <!-- uses same CSS as homepage -->
   <style>
-    .centered-image {
+    main {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 4rem 0;
+      min-height: 80vh;
     }
 
-    .centered-image img {
+    main img {
       max-width: 90%;
       height: auto;
-      border-radius: 10px;
     }
   </style>
 </head>
 <body>
 
+  <!-- Header with logo and navigation -->
+  <header>
+    <figure>
+      <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" />
+    </figure>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="clubs.html">Clubs</a></li>
+        <li><a href="staff.html">Staff</a></li>
+        <li><a href="construction.html">Resources</a></li>
+        <li><a href="construction.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><input type="text" placeholder="Search" /></li>
+      </ul>
+    </nav>
+  </header>
 
-  <!-- Main content: centered image -->
+  <!-- Main content -->
   <main>
-    <div class="centered-image">
-      <img src="Page UNder Construction.png" alt="Page Under Construction" />
-    </div>
+    <img src="Page UNder Construction.png" alt="Under Construction" />
   </main>
-
- 
-    
-  </footer>
 
 </body>
 </html>
