--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="#">Clubs</a></li>
+        <li><a href="clubs.html">Clubs</a></li>
         <li><a href="#">Staff</a></li>
         <li><a href="construction.html">Resources</a></li>
         <li><a href="construction.html">News</a></li>
