--- a/clubs.html
+++ b/clubs.html
@@ -5,57 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Clubs – Campus Life</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    .club-section {
-      text-align: center;
-      padding: 2rem 1rem;
-    }
+<style>
+  .club-section {
+    text-align: center;
+    padding: 2rem 1rem;
+  }
 
-    .club-section img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      margin: 1rem 0;
-    }
+  .club-section img {
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin: 1.5rem auto;
+    display: block;
+  }
 
-    .club-section h2 {
-      font-size: 2rem;
-      margin-top: 2rem;
-    }
+  .club-section h2 {
+    font-size: 2rem;
+    margin-top: 2rem;
+  }
 
-    .club-list {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      max-width: 500px;
-      margin: 2rem auto;
-    }
+  .club-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 500px;
+    margin: 2rem auto;
+  }
 
-    .club-button {
-      background-color: #005bbb;
-      color: #fff;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 999px;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
+  .club-button {
+    background-color: #005bbb;
+    color: #fff;
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 999px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background 0.3s ease;
+  }
 
-    .club-button:hover {
-      background-color: #004499;
-    }
+  .club-button:hover {
+    background-color: #004499;
+  }
 
-    /* Large Title */
-    main h1 {
-      text-align: center;
-      font-size: 3.5rem;
-      font-weight: bold;
-      margin: 2rem 0 1rem;
-    }
-  </style>
+  main h1 {
+    text-align: center;
+    font-size: 3.5rem;
+    font-weight: bold;
+    margin: 2rem 0 1rem;
+  }
+</style>
 </head>
 <body>
 
