--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
         <li><a href="About.html">About</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="clubs.html">Clubs</a></li>
-        <li><a href="#">Staff</a></li>
+        <li><a href="staff.html">Staff</a></li>
         <li><a href="construction.html">Resources</a></li>
         <li><a href="construction.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
