--- a/staff.html
+++ b/staff.html
@@ -108,6 +108,18 @@
         <span>Jessica Wells</span>
         <img src="staff9.jpg" alt="Jessica Wells" />
       </div>
+          <div class="staff-member">
+        <span>Chloe Smith</span>
+        <img src="staff7.jpg" alt="Chloe Smith" />
+      </div>
+      <div class="staff-member">
+        <span>Amanda Hartley</span>
+        <img src="staff8.jpg" alt="Amanda Hartley" />
+      </div>
+      <div class="staff-member">
+        <span>Jessica Wells</span>
+        <img src="staff9.jpg" alt="Jessica Wells" />
+      </div>
     </section>
   </main>
 
