--- a/staff.html
+++ b/staff.html
@@ -74,51 +74,51 @@
     <section class="staff-grid">
       <div class="staff-member">
         <span>Layla Hutto</span>
-        <img src="staff1.jpg" alt="Layla Hutto" />
+        <img src="EmilyWorrell.jpg" alt="Layla Hutto" />
       </div>
       <div class="staff-member">
         <span>Mason Kenon</span>
-        <img src="staff2.jpg" alt="Mason Kenon" />
+        <img src="brandon-j-wright_200x267.jpg" alt="Mason Kenon" />
       </div>
       <div class="staff-member">
         <span>Blake Bowman</span>
-        <img src="staff3.jpg" alt="Blake Bowman" />
+        <img src="Logue_L1.jpg" alt="Blake Bowman" />
       </div>
       <div class="staff-member">
         <span>Cassidy Sledge</span>
-        <img src="staff4.jpg" alt="Cassidy Sledge" />
+        <img src="sam-haering-headshot_200x267.jpg" alt="Cassidy Sledge" />
       </div>
       <div class="staff-member">
-        <span>Mateo Piedmont</span>
-        <img src="staff5.jpg" alt="Mateo Piedmont" />
+        <span>Charlotte Piedmont</span>
+        <img src="Candice-Advising-Photo-200-267px.jpg" alt="Mateo Piedmont" />
       </div>
       <div class="staff-member">
         <span>Carol Ann Stern</span>
-        <img src="staff6.jpg" alt="Carol Ann Stern" />
+        <img src="mollie-jones_200x267.jpg" alt="Carol Ann Stern" />
       </div>
       <div class="staff-member">
         <span>Chloe Smith</span>
-        <img src="staff7.jpg" alt="Chloe Smith" />
+        <img src="leah-nixon_200x267.jpg" alt="Chloe Smith" />
       </div>
       <div class="staff-member">
         <span>Amanda Hartley</span>
-        <img src="staff8.jpg" alt="Amanda Hartley" />
+        <img src="admissions-menu3.jpg" alt="Amanda Hartley" />
       </div>
       <div class="staff-member">
         <span>Jessica Wells</span>
-        <img src="staff9.jpg" alt="Jessica Wells" />
+        <img src="StudentPhoto.jpeg" alt="Jessica Wells" />
       </div>
           <div class="staff-member">
-        <span>Chloe Smith</span>
-        <img src="staff7.jpg" alt="Chloe Smith" />
+        <span>Mila Bear</span>
+        <img src="SynneByeAndersen.jpg" alt="Chloe Smith" />
       </div>
       <div class="staff-member">
-        <span>Amanda Hartley</span>
-        <img src="staff8.jpg" alt="Amanda Hartley" />
+        <span>Albert Rodriguez</span>
+        <img src="Justin-Shelley_200-267.jpg" alt="Amanda Hartley" />
       </div>
       <div class="staff-member">
-        <span>Jessica Wells</span>
-        <img src="staff9.jpg" alt="Jessica Wells" />
+        <span>John Martin</span>
+        <img src="2023-2-19-MPAC-Kenny-Brawner-22_600px.jpg" alt="Jessica Wells" />
       </div>
     </section>
   </main>
