--- a/staff.html
+++ b/staff.html
@@ -122,6 +122,16 @@
       </div>
     </section>
   </main>
-
+  <!-- Footer -->
+  <footer>
+    <nav>
+      <ul class="social-icons">
+        <li><a href="https://www.facebook.com/" target="_blank"><img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon" /></a></li>
+        <li><a href="https://www.linkedin.com/feed/" target="_blank"><img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon" /></a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon" /></a></li>
+        <li><a href="https://www.instagram.com/uscbcampuslife/" target="_blank"><img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon" /></a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
